message Node {
  required string ip = 1;
  required uint32 port = 2;
  required bytes nodeid = 3;
  optional bytes publickey = 4;
}

message Ping {}
message Pong {}

message Store {
  required bytes key = 1;
  required bytes value = 2;
}

message StoreResponse {}

message FindNode {
  required bytes key = 1;
}

message FindValue {
  required bytes key = 1;
}

message FoundValue {
  required bytes key = 1;
  required bytes value = 2;
}

message FindNodeResponse {
  repeated Node neighbors = 1;
}

message Message {
  required Node sender = 1;
  optional bytes signature = 2;
  required bytes nonce = 3;

  // consider using google/protobuf/any.proto
  oneof inner {
    Ping ping = 4;
    Pong pong = 5;
    Store store = 6;
    StoreResponse storeResponse = 7;
    FindNode findNode = 8;
    FindNodeResponse findNodeResponse = 9;
    FindValue findValue = 10;
    FoundValue foundValue = 11;
  }
}
